tests/baselines/reference/shorthand-property-es5-es6(target=es5).errors.txt
test.ts(1,19): error TS2307: Cannot find module './foo' or its corresponding type declarations.


==== test.ts (1 errors) ====
    import {foo} from './foo';
                      ~~~~~~~
!!! error TS2307: Cannot find module './foo' or its corresponding type declarations.
    const baz = 42;
    const bar = { foo, baz };
    